<resources>
    <string name="app_name">Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_add">Add</string>
    <string name="nav_author">Author</string>

    <string name="action_settings">Settings</string>

    <string name="action_add_new_item">ADD NEW ITEM</string>
    <string name="action_delete_all_items">DELETE ALL ITEMS</string>

    <string name="temperature">temperature: </string>
    <string name="minimum_temperature">minimum temperature: </string>
    <string name="maximum_temperature">maximum temperature: </string>
    <string name="humidity">humidity: </string>
    <string name="pressure">pressure: </string>

    <string name="author">Andor Attila Nás (HF3CJW)</string>

</resources>
