<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:textSize="50dp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:textSize="40dp"
            android:textStyle="italic"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/minimum_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvTempMin"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/maximum_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvTempMax"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvPressure"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="25dp">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                tools:context=".MapsActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            </LinearLayout>

    </LinearLayout>

</ScrollView>